; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_submodule.c_get_url_base.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_submodule.c_get_url_base.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @get_url_base to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_url_base(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %6, align 8
  store i32* null, i32** %7, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @lookup_default_remote(i32** %7, i32* %8)
  store i32 %9, i32* %5, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i32*, i32** %3, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = call i32 @git_remote_url(i32* %13)
  %15 = call i32 @git_buf_sets(i32* %12, i32 %14)
  store i32 %15, i32* %5, align 4
  br label %45

16:                                               ; preds = %2
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* @GIT_ENOTFOUND, align 4
  %19 = icmp ne i32 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %16
  br label %45

21:                                               ; preds = %16
  %22 = call i32 (...) @git_error_clear()
  br label %23

23:                                               ; preds = %21
  br label %24

24:                                               ; preds = %23
  %25 = load i32*, i32** %4, align 8
  %26 = call i64 @git_repository_is_worktree(i32* %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %39

28:                                               ; preds = %24
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @git_worktree_open_from_repository(%struct.TYPE_4__** %6, i32* %29)
  store i32 %30, i32* %5, align 4
  %31 = icmp slt i32 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %28
  br label %45

33:                                               ; preds = %28
  %34 = load i32*, i32** %3, align 8
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @git_buf_sets(i32* %34, i32 %37)
  store i32 %38, i32* %5, align 4
  br label %44

39:                                               ; preds = %24
  %40 = load i32*, i32** %3, align 8
  %41 = load i32*, i32** %4, align 8
  %42 = call i32 @git_repository_workdir(i32* %41)
  %43 = call i32 @git_buf_sets(i32* %40, i32 %42)
  store i32 %43, i32* %5, align 4
  br label %44

44:                                               ; preds = %39, %33
  br label %45

45:                                               ; preds = %44, %32, %20, %11
  %46 = load i32*, i32** %7, align 8
  %47 = call i32 @git_remote_free(i32* %46)
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %49 = call i32 @git_worktree_free(%struct.TYPE_4__* %48)
  %50 = load i32, i32* %5, align 4
  ret i32 %50
}

declare dso_local i32 @lookup_default_remote(i32**, i32*) #1

declare dso_local i32 @git_buf_sets(i32*, i32) #1

declare dso_local i32 @git_remote_url(i32*) #1

declare dso_local i32 @git_error_clear(...) #1

declare dso_local i64 @git_repository_is_worktree(i32*) #1

declare dso_local i32 @git_worktree_open_from_repository(%struct.TYPE_4__**, i32*) #1

declare dso_local i32 @git_repository_workdir(i32*) #1

declare dso_local i32 @git_remote_free(i32*) #1

declare dso_local i32 @git_worktree_free(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
